Bug 1880005 - Fix FenceHandle handling in WebGPUParent r=lsalzman

FenceHandle handling in WebGPUParent was wrong. The FenceHandle exists for each device.

Differential Revision: https://phabricator.services.mozilla.com/D202385